examples/errors/match_guards_error_path.flx
// Match guards: error-path index.
// See:
// - match_guard_syntax_error.flx
// - match_guard_non_exhaustive_error.flx

print("Run one of the dedicated match-guard error examples in this folder.");
